crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__rmd_multiple_chunks_file_content.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: content
---
```{r}
# jarl-ignore any_is_na: <reason>
any(is.na(x))
```

```{r}
1 + 1
# jarl-ignore any_is_na: <reason>
any(is.na(y))
```
