crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__same_rule_same_line_in_if_file_content.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: content
---
if (
    # jarl-ignore redundant_equals: <reason>
    x == TRUE || y == TRUE) {
  1
}
